// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MavenInstallation gradle renders all the messages 1`] = `
<div>
  <div
    class="gl-display-flex gl-justify-content-space-between gl-align-items-center"
  >
    <h3
      class="gl-font-lg"
    >
      Installation
    </h3>
     
    <div>
      <persisted-dropdown-selection-stub
        options="[object Object],[object Object]"
        storagekey="package_maven_installation_instructions"
      />
    </div>
  </div>
   
  <code-instruction-stub
    class="gl-mb-5"
    copytext="Copy Gradle install command"
    instruction="foo/gradle/install"
    label="Gradle install command"
    trackingaction="copy_gradle_install_command"
    trackinglabel="code_instruction"
  />
   
  <code-instruction-stub
    copytext="Copy add Gradle repository command"
    instruction="foo/gradle/add/source"
    label="Add Gradle repository command"
    multiline="true"
    trackingaction="copy_gradle_add_to_source_command"
    trackinglabel="code_instruction"
  />
</div>
`;

exports[`MavenInstallation maven renders all the messages 1`] = `
<div>
  <div
    class="gl-display-flex gl-justify-content-space-between gl-align-items-center"
  >
    <h3
      class="gl-font-lg"
    >
      Installation
    </h3>
     
    <div>
      <persisted-dropdown-selection-stub
        options="[object Object],[object Object]"
        storagekey="package_maven_installation_instructions"
      />
    </div>
  </div>
   
  <p>
    <gl-sprintf-stub
      message="Copy and paste this inside your %{codeStart}pom.xml%{codeEnd} %{codeStart}dependencies%{codeEnd} block."
    />
  </p>
   
  <code-instruction-stub
    copytext="Copy Maven XML"
    instruction="foo/xml"
    label=""
    multiline="true"
    trackingaction="copy_maven_xml"
    trackinglabel="code_instruction"
  />
   
  <code-instruction-stub
    copytext="Copy Maven command"
    instruction="foo/command"
    label="Maven Command"
    trackingaction="copy_maven_command"
    trackinglabel="code_instruction"
  />
   
  <h3
    class="gl-font-lg"
  >
    Registry setup
  </h3>
   
  <p>
    <gl-sprintf-stub
      message="If you haven't already done so, you will need to add the below to your %{codeStart}pom.xml%{codeEnd} file."
    />
  </p>
   
  <code-instruction-stub
    copytext="Copy Maven registry XML"
    instruction="foo/setup"
    label=""
    multiline="true"
    trackingaction="copy_maven_setup_xml"
    trackinglabel="code_instruction"
  />
   
  <gl-sprintf-stub
    message="For more information on the Maven registry, %{linkStart}see the documentation%{linkEnd}."
  />
</div>
`;
